# projeto-27-02-2026

./: CMakeLists.txt  README.md
src/: GenericPacker.cpp  GenericPacker.h  RegistryStub.cpp  RegistryStub.h  VirtualFS.cpp  VirtualFS.h  main.cpp
